--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -1,15 +1,15 @@
 ---
 title: 3 May Place
-subtitle: Renovation
+subtitle: New conservatory
 layout: default
 modal-id: 6
 date: 2014-07-15
-img: roundicons.png
-thumbnail: roundicons-thumbnail.png
+img: conservatory.png
+thumb: conservatory-thumb.png
 alt: image-alt
 project-date: April 2014
-client: Start Bootstrap
-category: Web Development
+client:
+category: Building
 description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
 
 ---
